wp-content/themes/wpshop/.happypack/s-551182294
SyntaxError: Unexpected token (108:30)

[0m [90m 106 | [39m[90m// console.log("d:", $("#mailinglist-form"));[39m
 [90m 107 | [39m
[31m[1m>[22m[39m[90m 108 | [39m[36mif[39m ($([32m"#mailinglist-form"[39m) [33m!==[39m[33m=[39m undefined) {
 [90m     | [39m                              [31m[1m^[22m[39m
 [90m 109 | [39m  initMailinglist()[33m;[39m
 [90m 110 | [39m}
 [90m 111 | [39m[0m

Error
    at transpile (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/loader-runner/lib/LoaderRunner.js:119:14)